:page_facing_up:

--- a/Resume/Readme
+++ b/Resume/Readme
@@ -1,15 +1,15 @@
-#### Resume with HTML5 and CSS3
+💹 Resume with HTML5 and CSS3
 
-:arrow: A beginner level resume template
+💹 A beginner level resume template
 
-#### Random Image Generator : https://i.pravatar.cc/200
+💹 Random Image Generator : https://i.pravatar.cc/200
 
-#### Icon Used : Font Awesome CDN
+💹 Icon Used : Font Awesome CDN
 
-#### Fontfamily : Google Fonts
+💹 Fontfamily : Google Fonts
 
-#### Learned from edyst (Youtube)
+💹 Learned from edyst (Youtube)
 
-####Not Responsive
+🚫 Not Responsive
 
-// Can add as a link in your Portfolio (e.g: View Resume)
+💹 Can add as a link in your Portfolio (e.g: View Resume)
